Kelsey Development Sandbox/src/objects/DS_TRDETAIL2__c.object
<CustomObject>
    <fields>
        <fullName>T16RCCFC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Child Removed Foster Care</description>
        <label>T16RCCFC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCCHP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Child Removed Hospitalization</description>
        <label>T16RCCHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCCIN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Child Removed Incarceration</description>
        <label>T16RCCIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCCOS__c</fullName>
        <description>Circumstances Child Removed Other Specified</description>
        <label>T16RCCOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T16RCCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Child Removed Other</description>
        <label>T16RCCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCCRS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Child Removed Residential Setting</description>
        <label>T16RCCRS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCCUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Child Removed Unknown</description>
        <label>T16RCCUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Child Removed</description>
        <label>T16RCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCOS__c</fullName>
        <description>Circumstances Other Specify</description>
        <label>T16RCOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T16RCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Other</description>
        <label>T16RCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCPCM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Parent/Caregiver Removed: Court Mandate</description>
        <label>T16RCPCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCPD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Parent/Caregiver Removed: Divorce</description>
        <label>T16RCPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCPHP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Parent/Caregiver Removed: Hospitalization</description>
        <label>T16RCPHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCPIN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Parent/Caregiver Removed: Incarceration</description>
        <label>T16RCPIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCPM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Parent/Caregiver Removed: Military</description>
        <label>T16RCPM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCPOS__c</fullName>
        <description>Circumstances Parent/Caregiver Removed: Other, Specified</description>
        <label>T16RCPOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T16RCPO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Parent/Caregiver Removed: Other</description>
        <label>T16RCPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCPT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Parent/Caregiver Removed: Training</description>
        <label>T16RCPT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCPUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Parent/Caregiver Removed: Unknown</description>
        <label>T16RCPUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Parent/Caregiver Removed: Work</description>
        <label>T16RCPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Parent/Caregiver Removed</description>
        <label>T16RCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RCUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Circumstances Unknown</description>
        <label>T16RCUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RDU12__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Duration of Separation 9-12m</description>
        <label>T16RDU12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RDU24__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Duration of Separation 1-2 years</description>
        <label>T16RDU24</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RDU2Y__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Duration of Separation grater than 2 years</description>
        <label>T16RDU2Y</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RDUUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Duration of Separation Unknown</description>
        <label>T16RDUUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RFREQ__c</fullName>
        <description>Separation frequency of experience</description>
        <label>T16RFREQ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T16RPRAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation = Other Adult Rel</description>
        <label>T16RPRAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RPROY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation = Other Youth</description>
        <label>T16RPROY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RPRP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation = Parent</description>
        <label>T16RPRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RPRSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation = Sibling</description>
        <label>T16RPRSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RPRUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation  = Unrelated adult</description>
        <label>T16RPRUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RPRUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation= Unknown</description>
        <label>T16RPRUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RRB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation revealed at Baseline</description>
        <label>T16RRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RRESIB__c</fullName>
        <description>Remain with Siblings</description>
        <label>T16RRESIB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T16RRODT__c</fullName>
        <description>Separation revealed at Other date</description>
        <label>T16RRODT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T16RRO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation revealed at Other</description>
        <label>T16RRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RSTP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status is Permanent</description>
        <label>T16RSTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RSTT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status is Temporary</description>
        <label>T16RSTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RSTU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status is Unknown</description>
        <label>T16RSTU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RTYPE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation type = experienced</description>
        <label>T16RTYPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RTYPU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation type = Unknown</description>
        <label>T16RTYPU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RTYPV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation type = Vicarious</description>
        <label>T16RTYPV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T16RTYPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Separation type = Witnessed</description>
        <label>T16RTYPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T17RREEC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forced Displace reason = Ethnic cleansing</description>
        <label>T17RREEC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T17RREFP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forced Displace reason = Fleeing persecution</description>
        <label>T17RREFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T17RREND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forced Displace reason = Natural Disaster</description>
        <label>T17RREND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T17RREOS__c</fullName>
        <description>Forced Displace reason = Other Specified</description>
        <label>T17RREOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T17RREO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forced Displace reason = Other</description>
        <label>T17RREO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T17RREVI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forced Displace reason = Violence</description>
        <label>T17RREVI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RCGAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Impaired caregiver is Oth Adult Relative</description>
        <label>T18RCGAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RCGOSP__c</fullName>
        <description>Impaired caregiver is Other Specified</description>
        <label>T18RCGOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T18RCGOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Impaired caregiver is Other Youth</description>
        <label>T18RCGOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RCGO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Impaired caregiver is Other</description>
        <label>T18RCGO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RCGP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Impaired caregiver is Parent</description>
        <label>T18RCGP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RCGSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Impaired caregiver is Sibling</description>
        <label>T18RCGSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RCGST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Impaired caregiver is Stranger</description>
        <label>T18RCGST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RCGUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Impaired caregiver is Unrelated Adult</description>
        <label>T18RCGUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RCGUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Impaired caregiver is Unknown</description>
        <label>T18RCGUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RIMPDG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Imp caregiver due to Drug use</description>
        <label>T18RIMPDG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RIMPDP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Imp caregiver Mental Health</description>
        <label>T18RIMPDP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RIMPIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Imp caregiver Medical Illness</description>
        <label>T18RIMPIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RIMPOSP__c</fullName>
        <description>Imp caregiver Other Specified</description>
        <label>T18RIMPOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T18RIMPO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Imp caregiver Other</description>
        <label>T18RIMPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T18RIMPUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Imp caregiver Unknown</description>
        <label>T18RIMPUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RASSLT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper violence = Assault</description>
        <label>T19RASSLT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RHOM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper violence = Homicide</description>
        <label>T19RHOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RINJAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Serious injury Oth Ad Rel</description>
        <label>T19RINJAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RINJC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Serious injury  Child</description>
        <label>T19RINJC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RINJOS__c</fullName>
        <description>Interper Viol Serious injury Other Spec</description>
        <label>T19RINJOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T19RINJOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Serious injury Oth Youth</description>
        <label>T19RINJOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RINJO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Serious injury Other</description>
        <label>T19RINJO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RINJP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Serious injury Parent</description>
        <label>T19RINJP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RINJSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Serious injury Sibling</description>
        <label>T19RINJSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RINJUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Serious injury Unrel Ad</description>
        <label>T19RINJUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RINJ__c</fullName>
        <description>Interper Viol serious injury inflicted</description>
        <label>T19RINJ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T19ROTHS__c</fullName>
        <description>Interper type other specified</description>
        <label>T19ROTHS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T19ROTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper violence Other Specify</description>
        <label>T19ROTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RPERAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Perp = Other Adult Rel</description>
        <label>T19RPERAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RPEROY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Perp = Other Youth</description>
        <label>T19RPEROY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RPERP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Perp = Parent</description>
        <label>T19RPERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RPERSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Perp = Sibling</description>
        <label>T19RPERSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RPERST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Perp= Stranger</description>
        <label>T19RPERST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RPERUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Perp = Unrelated adult</description>
        <label>T19RPERUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RPERU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Perp= Unknown</description>
        <label>T19RPERU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RROB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper violence = Robbery</description>
        <label>T19RROB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RSETC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Setting = Community</description>
        <label>T19RSETC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RSETH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Setting = Home</description>
        <label>T19RSETH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RSETOS__c</fullName>
        <description>Interper Viol Setting = Other Specified</description>
        <label>T19RSETOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T19RSETO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Setting = Other</description>
        <label>T19RSETO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RSETS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Setting = School</description>
        <label>T19RSETS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RSETU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper Viol Setting = Unknown</description>
        <label>T19RSETU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RSUIC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper violence = Suicide</description>
        <label>T19RSUIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RVPUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interper violence Unknown</description>
        <label>T19RVPUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T19RWEAPON__c</fullName>
        <description>Interper Viol weapon used</description>
        <label>T19RWEAPON</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T20RGANG__c</fullName>
        <description>Comm Violence gang-related?</description>
        <label>T20RGANG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T20RINJAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Serious injury to Other Adult Relative</description>
        <label>T20RINJAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RINJC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Serious injury to Child</description>
        <label>T20RINJC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RINJOS__c</fullName>
        <description>Comm Violence Serious injury Other Specified</description>
        <label>T20RINJOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T20RINJOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Serious injury Other Youth</description>
        <label>T20RINJOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RINJO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Serious injury to Other</description>
        <label>T20RINJO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RINJP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Serious injury to Parent</description>
        <label>T20RINJP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RINJSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Serious injury to Sibling</description>
        <label>T20RINJSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RINJUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Serious injury to Unrelated Adult</description>
        <label>T20RINJUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RINJ__c</fullName>
        <description>Comm Violence Injury</description>
        <label>T20RINJ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T20RSETC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Setting = Community</description>
        <label>T20RSETC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RSETOS__c</fullName>
        <description>Comm Violence Setting = Other Specified</description>
        <label>T20RSETOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T20RSETO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Setting = Other</description>
        <label>T20RSETO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RSETS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Setting = School</description>
        <label>T20RSETS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RSETU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comm Violence Setting = Unknown</description>
        <label>T20RSETU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T20RWEAPON__c</fullName>
        <description>Comm Violence weapon used</description>
        <label>T20RWEAPON</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T21RCFGT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence = Fighting</description>
        <label>T21RCFGT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RCOSP__c</fullName>
        <description>School Violence  = Other Spec</description>
        <label>T21RCOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T21RCOTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School Violence  = Other</description>
        <label>T21RCOTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RCSEX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence = Sexual harassment</description>
        <label>T21RCSEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RCSTL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence = Stealing</description>
        <label>T21RCSTL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RCSUIC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence = Classmate Suicide</description>
        <label>T21RCSUIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RCUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School Violence = Unknown</description>
        <label>T21RCUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RCVAN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence = Vandalism</description>
        <label>T21RCVAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RCWEAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence = Weapon possession</description>
        <label>T21RCWEAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RINJC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence injury to Child (self)</description>
        <label>T21RINJC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RINJOS__c</fullName>
        <description>Schl  violence to Other Specified</description>
        <label>T21RINJOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T21RINJOY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence injury to Other Youth</description>
        <label>T21RINJOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RINJO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence injury to Other</description>
        <label>T21RINJO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RINJSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence injury to Sibling</description>
        <label>T21RINJSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RINJT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence injury to Teacher</description>
        <label>T21RINJT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RINJ__c</fullName>
        <description>Schl  violence injury inflicted?</description>
        <label>T21RINJ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T21RSESE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School Violence Setting= School Event</description>
        <label>T21RSESE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RSESP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School Violence Setting= School Property</description>
        <label>T21RSESP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RSEWE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School Violence Setting= Way to/from Event</description>
        <label>T21RSEWE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RSEWS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School Violence Setting= Way to/from school</description>
        <label>T21RSEWS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T21RSHOOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schl  violence = School Shooting</description>
        <label>T21RSHOOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RFOSP__c</fullName>
        <description>Bullying form= Other Specified bullying</description>
        <label>T22RFOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T22RFOTR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying form= Other bullying</description>
        <label>T22RFOTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RFPHSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying form= Physical bullying</description>
        <label>T22RFPHSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RFSEXB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying form= Sexual bullying</description>
        <label>T22RFSEXB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T22RFSOCB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bullying form= Social bullying</description>
        <label>T22RFSOCB</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>